rust/crates/agent-burn/src/snapshots/agent_burn__summary__tests__snapshots_summarize_by_key_aggregates_counts_costs_and_breakdowns.snap
---
source: crates/agent-burn/src/summary.rs
expression: rows
---
[
  {
    "date": "2026-01-02",
    "inputTokens": 300,
    "outputTokens": 130,
    "cacheCreationTokens": 30,
    "cacheReadTokens": 13,
    "totalCost": 0.375,
    "credits": 1.5,
    "messageCount": 5,
    "modelsUsed": [
      "gpt-5.2-codex",
      "claude-sonnet-4-20250514"
    ],
    "modelBreakdowns": [
      {
        "modelName": "claude-sonnet-4-20250514",
        "inputTokens": 200,
        "outputTokens": 80,
        "cacheCreationTokens": 20,
        "cacheReadTokens": 8,
        "cost": 0.25
      },
      {
        "modelName": "gpt-5.2-codex",
        "inputTokens": 100,
        "outputTokens": 50,
        "cacheCreationTokens": 10,
        "cacheReadTokens": 5,
        "cost": 0.125
      }
    ],
    "project": "/workspace/api"
  },
  {
    "date": "2026-01-03",
    "inputTokens": 10,
    "outputTokens": 0,
    "cacheCreationTokens": 0,
    "cacheReadTokens": 0,
    "totalCost": 0.0,
    "credits": null,
    "modelsUsed": [],
    "modelBreakdowns": [],
    "project": "/workspace/web"
  }
]
